--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/docs(.*)",
       "dest": "src/main.ts",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "continue": true
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts"
     }
   ]
 }
