--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "^5.8.0",
+    "prisma": "^5.8.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
