--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "prisma generate",
+  "installCommand": "pnpm install && pnpm prisma generate",
   "builds": [
     {
       "src": "api/index.ts",
