--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
   "version": 2,
-  "installCommand": "pnpm install && pnpm prisma generate",
+  "buildCommand": "pnpm run build",
+  "outputDirectory": ".",
   "builds": [
     {
-      "src": "api/index.ts",
+      "src": "dist/api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.ts"
+      "dest": "dist/api/index.js"
     }
   ]
 }
