--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
   "version": 2,
   "buildCommand": "pnpm run build",
-  "outputDirectory": ".",
-  "builds": [
-    {
-      "src": "dist/api/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "dist/api/index.js": {
+      "runtime": "@vercel/node@3"
     }
-  ],
-  "routes": [
+  },
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "dist/api/index.js"
+      "source": "/(.*)",
+      "destination": "/dist/api/index.js"
     }
   ]
 }
