--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/rds-signer": "^3.967.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -34,7 +35,9 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/throttler": "^5.1.1",
+    "@prisma/adapter-pg": "^5.22.0",
     "@prisma/client": "^5.22.0",
+    "@vercel/oidc-aws-credentials-provider": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -56,6 +59,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "@types/passport-jwt": "^4.0.0",
+    "@types/pg": "^8.16.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
