--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@nestjs/throttler": "^5.1.1",
     "@prisma/adapter-pg": "^5.22.0",
     "@prisma/client": "^5.22.0",
+    "@vercel/functions": "^3.3.5",
     "@vercel/oidc-aws-credentials-provider": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "ioredis": "^5.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
