--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
   "version": 2,
-  "installCommand": "npm install && npx prisma generate",
-  "builds": [
+  "installCommand": "pnpm install && pnpm prisma generate",
+  "buildCommand": "pnpm run build",
+  "rewrites": [
     {
-      "src": "dist/api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/dist/api/index.js"
+      "source": "/(.*)",
+      "destination": "/api/index"
     }
   ]
 }
