fix: add global prefix to vercel entry point

--- a/env.example
+++ b/env.example
@@ -11,3 +11,9 @@ REDIS_URL="redis://localhost:6379"
 # App Configuration
 PORT=3000
 NODE_ENV="development"
+
+# Cloudinary Configuration (for cover image storage)
+# Get these from https://console.cloudinary.com/
+CLOUDINARY_CLOUD_NAME="your-cloud-name"
+CLOUDINARY_API_KEY="your-api-key"
+CLOUDINARY_API_SECRET="your-api-secret"
