--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@vercel/functions": "^3.3.5",
     "@vercel/oidc-aws-credentials-provider": "^3.0.6",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.8.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
