--- a/env.example
+++ b/env.example
@@ -17,3 +17,10 @@ NODE_ENV="development"
 CLOUDINARY_CLOUD_NAME="your-cloud-name"
 CLOUDINARY_API_KEY="your-api-key"
 CLOUDINARY_API_SECRET="your-api-secret"
+
+# Pusher Configuration (for real-time chat)
+# Get these from https://dashboard.pusher.com/
+PUSHER_APP_ID="your-app-id"
+PUSHER_KEY="your-key"
+PUSHER_SECRET="your-secret"
+PUSHER_CLUSTER="ap3"
