--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "prisma": "^5.22.0",
+    "pusher": "^5.3.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
