--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.8.0",
+    "ethers": "^6.16.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
